--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <h1 style="text-align: center;">Hello IT KMITL</h1>
     <div class="content-1">
-        <img src="ogimage.png">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet ipsam nesciunt ut accusamus, accusantium, mollitia delectus ex id voluptas eaque beatae nam natus. Delectus voluptatem consequatur, corporis reprehenderit eius saepe facilis illo. Officiis, architecto officia! Ullam eos doloremque eum iusto consectetur atque dicta ab sed libero, est quidem a rerum tempora alias repellat, quaerat aperiam inventore nostrum perferendis possimus blanditiis dolor? Corporis, laborum repellat inventore harum amet minus iure quidem quis explicabo suscipit aut. Id eveniet aliquam amet. Molestias qui odit quia modi, distinctio nostrum eos doloremque eius nulla, aliquam, ab voluptas molestiae voluptatibus ipsum incidunt reiciendis beatae necessitatibus mollitia.</p>
+        <img src="profile.jpeg">
+        <p>สวัสดีครับ ชื่ออาร์ม</p>
+        <li>ชื่อจริง เจตนิพัทธ์ ทานะมัย</li>
+        <li>ความสามารถพิเศษ นอนแบบปลุกไม่ตื่น นอนเเบบกินบ้านกินเมือง นอนเหมือนซ้อมตาย นอนแบบเรียกกู้ภัยเเล้วยังไม่รู้ตัว นอนแบบเพื่อนไม่สนเพื่อนไม่เเคร์ แม่โทรมาไม่รับ ใครทักมาไม่ตอบ (เเต่เธอทักมาตอบนะ)</li>
+        <li><a href="https://www.instagram.com/_jnp.a/" target="_blank">ติดตามไอจีได้นะครับ</a></li>
     </div>
     <hr>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod aliquam dicta ipsam error tenetur debitis quidem facere quia ullam. Fugiat est ipsam delectus molestiae id molestias? Provident doloribus quod quisquam quibusdam iste delectus aspernatur eius aliquid sapiente culpa voluptatem veniam suscipit quaerat distinctio alias officia temporibus, reiciendis numquam eveniet. Voluptates ratione quas odio obcaecati iure qui itaque fugiat at, quisquam magni inventore necessitatibus ipsum voluptatum. Vitae aspernatur dignissimos consectetur! Explicabo, eos, omnis iure error commodi tempora expedita quam dolor sunt, optio tempore quasi iusto magnam facilis. Repellendus distinctio facere asperiores ullam voluptate ipsum provident impedit debitis voluptatem nemo tenetur a aperiam quo dolor doloribus, quasi recusandae quae eos, odio perspiciatis blanditiis eligendi sed similique! Aliquid distinctio repudiandae, repellat cupiditate dolor iusto ad quod earum expedita officiis ipsa aspernatur excepturi dignissimos autem voluptas deleniti laborum ea labore qui ex deserunt at molestias eligendi saepe. Eveniet placeat voluptate voluptatem adipisci, modi accusamus.</p>
+    <p>ไม่รู้จะเขียนอะไรเเล้วครับ คิดไม่ออกสมองตัน ตันแบบไม่มีอะไรกั้น</p>
 </body>
 </html>
